[gd_scene load_steps=34 format=3 uid="uid://domreoxq45pp6"]

[ext_resource type="Texture2D" uid="uid://ddnfq1muk6bvw" path="res://assets/RC/rc overalls skin tone 4.png" id="1_ajxyj"]
[ext_resource type="Texture2D" uid="uid://c7abx88c3rwc4" path="res://assets/arrow_right.png" id="1_ey64d"]
[ext_resource type="Texture2D" uid="uid://dbmarj3gak6by" path="res://assets/text_box.png" id="1_gu03t"]
[ext_resource type="Script" path="res://character_customization.gd" id="1_sg3f0"]
[ext_resource type="FontFile" uid="uid://biekrowj30rpa" path="res://assets/ldfcomicsans-font/Ldfcomicsanslight-6dZo.ttf" id="2_bnls7"]
[ext_resource type="Texture2D" uid="uid://d0v3y1ypvyc8b" path="res://assets/RC/rc overalls skin tone 3.png" id="2_u7qid"]
[ext_resource type="Texture2D" uid="uid://6mr4hnkew5cs" path="res://assets/checkerboards/checkerboard2.png" id="3_s8bm8"]
[ext_resource type="Texture2D" uid="uid://ciermrtlnp8kx" path="res://assets/RC/rc overalls skin tone 2.png" id="3_uy2bu"]
[ext_resource type="Texture2D" uid="uid://bdcads7hvosh1" path="res://assets/RC/rc overalls skin tone 1.png" id="4_sn0bs"]
[ext_resource type="FontFile" uid="uid://30oag2tv4q1w" path="res://assets/ldfcomicsans-font/Ldfcomicsans-jj7l.ttf" id="6_fxq05"]
[ext_resource type="Script" path="res://name_input.gd" id="7_qyhp2"]
[ext_resource type="Texture2D" uid="uid://nccu8byc65ub" path="res://assets/arrow_left.png" id="11_16850"]
[ext_resource type="Texture2D" uid="uid://ccmrhf3k5r2yy" path="res://assets/start.png" id="12_i0hrp"]
[ext_resource type="Script" path="res://start.gd" id="13_45uu6"]
[ext_resource type="Texture2D" uid="uid://dkc7jkaqpx3f2" path="res://assets/RC/cassidy.png" id="13_na64t"]
[ext_resource type="Texture2D" uid="uid://bwecfynuvk3qo" path="res://assets/RC/elli.png" id="14_aky18"]
[ext_resource type="Texture2D" uid="uid://4hjjopvuw6mk" path="res://assets/RC/jack.png" id="15_ba8k6"]
[ext_resource type="Texture2D" uid="uid://cj417rthqu104" path="res://assets/RC/renee.png" id="16_0nckv"]
[ext_resource type="Texture2D" uid="uid://blj10d26ng766" path="res://assets/RC/rc open mouth.png" id="17_cjdat"]
[ext_resource type="Script" path="res://saveload.gd" id="19_vkvyb"]

[sub_resource type="Animation" id="Animation_beo7q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(954, 300)]
}

[sub_resource type="Animation" id="Animation_xbvdj"]
resource_name = "move"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(842, 542), Vector2(787, 542)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j7c0x"]
_data = {
"RESET": SubResource("Animation_beo7q"),
"move": SubResource("Animation_xbvdj")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_000m4"]
atlas = ExtResource("4_sn0bs")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cv4xh"]
atlas = ExtResource("3_uy2bu")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4uj8"]
atlas = ExtResource("2_u7qid")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2kb28"]
atlas = ExtResource("1_ajxyj")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_cuaqb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_000m4")
}],
"loop": true,
"name": &"RC1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cv4xh")
}],
"loop": true,
"name": &"RC2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4uj8")
}],
"loop": true,
"name": &"RC3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2kb28")
}],
"loop": true,
"name": &"RC4",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_wli6w"]
atlas = ExtResource("13_na64t")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bh8rf"]
atlas = ExtResource("14_aky18")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_glfat"]
atlas = ExtResource("15_ba8k6")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrcak"]
atlas = ExtResource("16_0nckv")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_6b7au"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wli6w")
}],
"loop": true,
"name": &"Cassidy",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bh8rf")
}],
"loop": true,
"name": &"Elli",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_glfat")
}],
"loop": true,
"name": &"Jack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrcak")
}],
"loop": true,
"name": &"Renee",
"speed": 5.0
}]

[node name="Character" type="Node2D"]
script = ExtResource("1_sg3f0")

[node name="right" type="TextureButton" parent="."]
z_index = 1
offset_left = 1305.0
offset_top = 350.0
offset_right = 1362.0
offset_bottom = 404.0
scale = Vector2(7, 7)
texture_normal = ExtResource("1_ey64d")
texture_pressed = ExtResource("1_ey64d")
texture_hover = ExtResource("1_ey64d")

[node name="left" type="TextureButton" parent="."]
z_index = 1
offset_left = 432.0
offset_top = 350.0
offset_right = 489.0
offset_bottom = 404.0
scale = Vector2(7, 7)
texture_normal = ExtResource("11_16850")
texture_pressed = ExtResource("11_16850")
texture_hover = ExtResource("11_16850")

[node name="textBox" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(960, 898.625)
scale = Vector2(1, 1.01319)
texture = ExtResource("1_gu03t")

[node name="Customize" type="Label" parent="textBox"]
custom_minimum_size = Vector2(10, 10)
offset_left = -860.0
offset_top = -150.0
offset_right = -118.88
offset_bottom = 140.16
theme_override_fonts/font = ExtResource("2_bnls7")
theme_override_font_sizes/font_size = 80
text = "
	Customize your date!"

[node name="Name" type="Label" parent="textBox"]
z_index = 2
offset_left = -869.0
offset_top = 60.0
offset_right = -126.0
offset_bottom = 318.0
theme_override_fonts/font = ExtResource("2_bnls7")
theme_override_font_sizes/font_size = 80
text = "Name your date:"

[node name="TextEdit" type="TextEdit" parent="textBox"]
offset_left = -290.0
offset_top = 60.0
offset_right = 545.0
offset_bottom = 220.0
theme_override_fonts/font = ExtResource("6_fxq05")
theme_override_font_sizes/font_size = 80
placeholder_text = "Enter your date's name!
"
script = ExtResource("7_qyhp2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_j7c0x")
}
autoplay = "move"

[node name="Sprite2D" type="Sprite2D" parent="AnimationPlayer"]
position = Vector2(954, 300)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_s8bm8")

[node name="start" type="TextureButton" parent="."]
z_index = 1
offset_left = 1512.0
offset_top = 533.0
offset_right = 1712.0
offset_bottom = 633.0
scale = Vector2(7, 7)
texture_normal = ExtResource("12_i0hrp")
texture_pressed = ExtResource("12_i0hrp")
texture_hover = ExtResource("12_i0hrp")
script = ExtResource("13_45uu6")

[node name="RCSkin" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(975.25, 448.501)
scale = Vector2(11.9922, 11.3594)
sprite_frames = SubResource("SpriteFrames_cuaqb")
animation = &"RC4"
frame_progress = 0.916827

[node name="RCHair" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(973.5, 409)
scale = Vector2(11.2031, 10.4062)
sprite_frames = SubResource("SpriteFrames_6b7au")
animation = &"Jack"

[node name="left1" type="TextureButton" parent="."]
z_index = 1
offset_left = 432.0
offset_top = 66.0
offset_right = 489.0
offset_bottom = 120.0
scale = Vector2(7, 7)
texture_normal = ExtResource("11_16850")
texture_pressed = ExtResource("11_16850")
texture_hover = ExtResource("11_16850")

[node name="right1" type="TextureButton" parent="."]
z_index = 1
offset_left = 1305.0
offset_top = 66.0
offset_right = 1362.0
offset_bottom = 120.0
scale = Vector2(7, 7)
texture_normal = ExtResource("1_ey64d")
texture_pressed = ExtResource("1_ey64d")
texture_hover = ExtResource("1_ey64d")

[node name="RCFace" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(975.25, 355)
scale = Vector2(13.8125, 11.5)
texture = ExtResource("17_cjdat")

[node name="Save" type="Node" parent="."]
script = ExtResource("19_vkvyb")

[connection signal="pressed" from="right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="right" to="right" method="_on_pressed"]
[connection signal="pressed" from="left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="left" to="left" method="_on_pressed"]
[connection signal="text_changed" from="textBox/TextEdit" to="Save" method="_on_text_edit_text_changed"]
[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="start" to="start" method="_on_pressed"]
[connection signal="animation_changed" from="RCSkin" to="Save" method="_on_rc_skin_animation_changed"]
[connection signal="animation_changed" from="RCHair" to="Save" method="_on_rc_hair_animation_changed"]
[connection signal="pressed" from="left1" to="." method="_on_left_1_pressed"]
[connection signal="pressed" from="right1" to="." method="_on_right_1_pressed"]
